maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: type mismatch;
 found   : String
 required: Int
  	setIndication(coord(0), coord(1) - 1, "" + getIndication(coord(0), coord(1)))
                                                 ^JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), "" + 0)
                ^JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), "" + 0)
                          ^JediEscaper:25: error: type mismatch;
 found   : String
 required: Int
  setIndication(coord(0), coord(1), "" + 0)
                                       ^